// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comment expansion > should expand basic comments 1`] = `
"# The MagicMark sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.js**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.js

<!-- /basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

* I
* am
* a
* list
* that
* must
* be
* here

<!-- /basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions with options argument, same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- # basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MagicMark will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MagicMark will report the error.

<!-- basic-throws -->

<!-- /basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered -->

I had to be last

<!-- /basic-ordered -->
"
`;

exports[`comment expansion > should expand prefixed comments only 1`] = `
"# The MagicMark sample document

## Basic comment expansion

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm\` option is set:

<!-- mm-basic -->

**A bold statement from test-rules.js**

<!-- /mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

## Expansions with options argument, same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

## Expansions with arguments, syntax forgiveness

<!--- # basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MagicMark will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MagicMark will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered -->
"
`;

exports[`comment expansion > should include the meta tag if asked 1`] = `
"<!-- Warning: Content in HTML comment blocks generated by magicmark on 2024-01-28. -->

# The MagicMark sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules.js**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

I was generated from test-rules.js

<!-- /basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

* I
* am
* a
* list
* that
* must
* be
* here

<!-- /basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions with options argument, same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

🌳 I am between two ferns 🌳

<!-- /basic-options -->

## Expansions with arguments, syntax forgiveness

<!--- # basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

🪴 I am between two ferns 🪴

<!-- /basic-options -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MagicMark will report the error.

<!-- basic-empty -->

<!-- /basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MagicMark will report the error.

<!-- basic-throws -->

<!-- /basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered -->

I had to be last

<!-- /basic-ordered -->
"
`;

exports[`comment expansion > should work with arbitrary json files 1`] = `
"<!-- Warning: Content in HTML comment blocks generated by magicmark on 2024-01-28. -->

# The MagicMark sample document

## Basic comment expansion

<!-- basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

## Expansions with options argument, same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

## Expansions with arguments, syntax forgiveness

<!--- # basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

magicmark

<!-- /name -->

<!--- author.name -->

Eric Mika

<!-- /author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MagicMark will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MagicMark will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered -->
"
`;

exports[`comment expansion > should work with hand-crafted json rules 1`] = `
"<!-- Warning: Content in HTML comment blocks generated by magicmark on 2024-01-28. -->

# The MagicMark sample document

## Basic comment expansion

<!-- basic -->

**A bold statement from test-rules-json.json**

<!-- /basic -->

## Prefixed comment

Expansion only happens when \`--prefix mm\` option is set:

<!-- mm-basic -->

## Comment expansion with dynamic content

Shows the name of the rules file:

<!-- basic-dynamic -->

## Required expansion

Inclusion is validated via \`--check\` option

<!-- basic-list-required -->

* I
* am
* a
* list
* that
* must
* be
* here

<!-- /basic-list-required -->

## Expansions with options argument, canonical syntax

<!-- basic-options {prefix: "🪴 ", suffix: " 🪴"} -->

## Expansions with options argument, same expansion with different options

<!-- basic-options {prefix: "🌳 ", suffix: " 🌳"} -->

## Expansions with arguments, syntax forgiveness

<!--- # basic-options({prefix: "🪴 ", suffix: " 🪴"}) -->

## Expansions via dot paths given arbitrary json files as rules

Given e.g. \`--rules ./package.json\`, allow access to fields in the file:

<!--- name -->

<!--- author.name -->

## Handling empty rule content

This expansion rule always returns an empty string. The comment will not be expanded, MagicMark will report the error.

<!-- basic-empty -->

## Handling non-required rule errors

This expansion rule always throws an error. The comment will not be expanded, and MagicMark will report the error.

<!-- basic-throws -->

## Ordered expansion

Order in the document is validated via \`--check\` option

<!-- basic-ordered -->
"
`;
